--- a/app/07product/views/tktgoodsmodel.html
+++ b/app/07product/views/tktgoodsmodel.html
@@ -1,479 +1,205 @@
 <div class="col-xs-10 col-xs-offset-1" >
-
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			基本信息
 			<button type="button" 
 				class="btn btn-xs btn-info pull-right"
-				ng-click="placego()"
-				ng-show="placeobjstate === 1"
+				ng-click="goodsgo()"
+				ng-show="goodsobjstate === 1"
 			>
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 			</button>
 
 			<button type="button" 
 				class="btn btn-xs btn-success pull-right"
-				ng-click="placeedit()"
-				ng-show="placeobjstate === 0"
+				ng-click="goodsedit()"
+				ng-show="goodsobjstate === 0"
 			>
 				<span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
 			</button>
 		</div>
 		<div class="panel-body">
-		<div class="container-fluid">
-			<!-- 编辑状态 -->
-			<div ng-show="placeobjstate === 1">
-				<div class="col-xs-8" >
-					<div class="form-group">
-						<label class="col-xs-2 control-label">名称</label>
-						<div class="col-xs-10">
-							<input type="text" class="form-control" placeholder="请输入名称"
-							ng-model="placeobj.name"
-							>
+			<div class="container-fluid">
+				<!-- 编辑状态 -->
+				<div ng-show="goodsobjstate === 1">
+					<div class="col-xs-10" >
+						<div class="form-group">
+							<label class="col-xs-2 control-label">商品编号</label>
+							<div class="col-xs-10">
+								<input type="text" class="form-control" placeholder="请输入商品编号"
+								ng-model="goodsobj.code"
+								>
+							</div>
 						</div>
-					</div>
 
-					<div class="form-group">
-						<label class="col-xs-2 control-label">地址</label>
-						<div class="col-xs-10">
-							<input type="text" class="form-control" 
-							ng-model="placeobj.address"
-							>
+						<div class="form-group">
+							<label class="col-xs-2 control-label">商品名称</label>
+							<div class="col-xs-10">
+								<input type="text" class="form-control" placeholder="请输入商品名称"
+								ng-model="goodsobj.name"
+								>
+							</div>
 						</div>
-					</div>
 
-					<div class="form-group">
-						<label class="col-xs-2 control-label">简介</label>
-						<div class="col-xs-10">
-							<textarea class="form-control" rows="4"
-							ng-model="placeobj.content"
-							></textarea>
+						<div class="form-group">
+							<label class="col-xs-2 control-label">所属景区</label>
+							<div class="col-xs-10">
+								<select class="form-control" ng-model="goodsobj.place_code" 
+					              ng-options="view.code as view.name for view in viewarr"
+					            >
+					            </select>
+							</div>
 						</div>
-					</div>
 
-					<div class="form-group">
-						<label class="col-xs-2 control-label">营业时间</label>
-						<div class="col-xs-10">
-							<input type="text" class="form-control" 
-							ng-model="placeobj.open_time"
-							>
+						<div class="form-group">
+							<label class="col-xs-2 control-label">成本价格</label>
+							<div class="col-xs-10">
+								<input type="number" class="form-control" placeholder="请输入成本价格" min='0'
+								ng-model="goodsobj.cost_price"
+								>
+							</div>
 						</div>
-					</div>
 
-					<div class="form-group">
-						<label class="col-xs-2 control-label">省</label>
-						<div class="col-xs-10">
-							<input type="text" class="form-control" 
-							ng-model="placeobj.province"
-							>
+						<div class="form-group">
+							<label class="col-xs-2 control-label">商品分类</label>
+							<div class="col-xs-10">
+								<input type="text" class="form-control" 
+								ng-model="goodsobj.goods_category"
+								>
+							</div>
 						</div>
-					</div>
 
-					<div class="form-group">
-						<label class="col-xs-2 control-label">市</label>
-						<div class="col-xs-10">
-							<input type="text" class="form-control" 
-							ng-model="placeobj.city"
-							>
+						<div class="form-group">
+							<label class="col-xs-2 control-label">商品状态</label>
+							<div class="col-xs-10">
+								<label class="radio-inline">
+								  <input type="radio" name="state" value="0"
+								  ng-model="goodsobj.state"
+								  > 下架
+								</label>
+								<label class="radio-inline">
+								  <input type="radio" name="state" value="1"
+								  ng-model="goodsobj.state"
+								  > 上架
+								</label>
+							</div>
 						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">区</label>
-						<div class="col-xs-10">
-							<input type="text" class="form-control" 
-							ng-model="placeobj.area"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">经度</label>
-						<div class="col-xs-4">
-							<input type="text" class="form-control"
-							ng-model="placeobj.longitude"
-							>
-						</div>
-						<label class="col-xs-2 control-label">纬度</label>
-						<div class="col-xs-4">
-							<input type="text" class="form-control"
-							ng-model="placeobj.latitude"
-							>
-						</div>
-					</div>
-				</div>
-
-				
-			</div>
-
-
-			<!-- 展示状态 -->
-			<div ng-show="placeobjstate === 0">
-				<div class="col-xs-8" >
-					<div class="form-group">
-						<label class="col-xs-2 control-label">名称</label>
-						<div class="col-xs-10">
-							<p class="form-control-static">{{placeobj.name}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">地址</label>
-						<div class="col-xs-10">
-							<p class="form-control-static">{{placeobj.address}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">简介</label>
-						<div class="col-xs-10">
-							<p class="form-control-static">{{placeobj.content}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">营业时间</label>
-						<div class="col-xs-10">
-							<p class="form-control-static">{{placeobj.open_time}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">省</label>
-						<div class="col-xs-10">
-							<p class="form-control-static">{{placeobj.province}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">市</label>
-						<div class="col-xs-10">
-							<p class="form-control-static">{{placeobj.city}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">区</label>
-						<div class="col-xs-10">
-							<p class="form-control-static">{{placeobj.area}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-2 control-label">经度</label>
-						<div class="col-xs-4">
-							<p class="form-control-static">{{placeobj.longitude}}</p>
-						</div>
-						<label class="col-xs-2 control-label">纬度</label>
-						<div class="col-xs-4">
-							<p class="form-control-static">{{placeobj.latitude}}</p>
-						</div>
-					</div>
+					</div>			
 				</div>
 
 
+				<!-- 展示状态 -->
+				<div ng-show="goodsobjstate === 0">
+					<div class="col-xs-10" >
+						<div class="form-group">
+							<label class="col-xs-2 control-label">商品编号</label>
+							<div class="col-xs-10">
+								<p class="form-control-static">{{goodsobj.code}}</p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-xs-2 control-label">商品名称</label>
+							<div class="col-xs-10">
+								<p class="form-control-static">{{goodsobj.name}}</p>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="col-xs-2 control-label">所属景区</label>
+							<div class="col-xs-10">
+								<select class="form-control" ng-model="goodsobj.place_code" 
+					              ng-options="view.code as view.name for view in viewarr"
+					            >
+					            </select>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="col-xs-2 control-label">成本价格</label>
+							<div class="col-xs-10">
+								<p class="form-control-static">{{goodsobj.cost_price}}</p>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="col-xs-2 control-label">商品分类</label>
+							<div class="col-xs-10">
+								<p class="form-control-static">{{goodsobj.goods_category}}</p>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="col-xs-2 control-label">商品状态</label>
+							<div class="col-xs-10">
+								<label class="radio-inline">
+								  <input type="radio" name="state" value="0"
+								  ng-model="goodsobj.state"
+								  > 下架
+								</label>
+								<label class="radio-inline">
+								  <input type="radio" name="state" value="1"
+								  ng-model="goodsobj.state"
+								  > 上架
+								</label>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-
 		</div>
-		</div>
-
 	</div>
-
-
 </div>
 
-
-
-
-
-
-<div class="col-xs-10 col-xs-offset-1"
-	ng-show="placeobj.id != ''"
- >
-
+<div class="col-xs-10 col-xs-offset-1" >
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			详情信息
-			<button type="button" 
-				class="btn btn-xs btn-info pull-right"
-				ng-click="viewgo()"
-				ng-show="viewobjstate === 1"
-			>
-				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-			</button>
-
-			<button type="button" 
-				class="btn btn-xs btn-success pull-right"
-				ng-click="viewedit()"
-				ng-show="viewobjstate === 0"
-			>
-				<span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-			</button>
-			
 		</div>
 		<div class="panel-body">
-		<div class="container-fluid">
-			<!-- 编辑状态 -->
-			<div ng-show="viewobjstate === 1">
-				<div class="col-xs-6">
-					
+			<div class="container-fluid">
+				<div class="col-xs-10" >
+
 					<div class="form-group">
-						<label class="col-xs-3 control-label">主题</label>
-						<div class="col-xs-9">
-							<select class="form-control" ng-model="viewobj.theme" 
-				              ng-options="view.code as view.name for view in viewarr"
+						<label class="col-xs-2 control-label">添加票种</label>
+						<div class="col-xs-5">
+
+							<select class="form-control" ng-model="goodsobj.ticket_type" 
+				              ng-options="type.code as type.name for type in typearr"
 				            >
 				            </select>
 						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">子名称</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.subname"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">开放日期</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.open_date"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">服务承诺</label>
-						<div class="col-xs-9">
-							<textarea class="form-control" rows="3"
-							ng-model="viewobj.promise"
-							></textarea>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">预订须知</label>
-						<div class="col-xs-9">
-							<textarea class="form-control" rows="3"
-							ng-model="viewobj.book_info"
-							></textarea>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">星级</label>
-						<div class="col-xs-9">
-							<select class="form-control" ng-model="viewobj.star" >
-								<option value="1">1</option>
-								<option value="2">2</option>
-								<option value="3">3</option>
-								<option value="4">4</option>
-								<option value="5">5</option>
-				            </select>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-xs-6">
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">好评</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.ev_good"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">一般评价</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.ev_general"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">差评</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.ev_bad"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">全景地址</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.view720_url"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">电子杂志</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.ebook_url"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">优惠政策</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.fav_policy"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">提前时间(小时）</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.bef_hour"
-							>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">排序</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" 
-							ng-model="viewobj.asort"
-							>
-						</div>
-					</div>
-
-				</div>
-			</div>
-
-
-
-			<!-- 展示状态 -->
-			<div ng-show="viewobjstate === 0">
-				<div class="col-xs-6">
-					
-					<div class="form-group">
-						<label class="col-xs-3 control-label">主题</label>
-						<div class="col-xs-9">
-							<select class="form-control" ng-model="viewobj.theme" 
-				              ng-options="view.code as view.name for view in viewarr"
+						<div class="col-xs-3">
+							<select class="form-control" ng-model="goodsobj.ticketattr" 
+				              ng-options="tktattr.ticket_attr_id as tktattr.type_attr_name for tktattr in tktarr"
 				            >
 				            </select>
 						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">子名称</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.subname}}</p>
+						<div class="col-xs-2">
+							<a ng-click="add()" class="btn btn-success btn-sm">添加</a>
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">开放日期</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.open_date}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">服务承诺</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.promise}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">预订须知</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.book_info}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">星级</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.star}}</p>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-xs-6">
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">好评</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.ev_good}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">一般评价</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.ev_general}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">差评</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.ev_bad}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">全景地址</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.view720_url}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">电子杂志</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.ebook_url}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">优惠政策</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.fav_policy}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">提前时间(小时）</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.bef_hour}}</p>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">排序</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.asort}}</p>
-						</div>
-					</div>
+					<table class="table table-bordered">
+					    <thead>
+					      <tr>
+					        <th class="col-md-6 text-center">票种类型</th>
+					        <th class="col-md-4 text-center">票种属性</th>
+					        <th class="col-md-2 text-center">操作</th>
+					      </tr>
+					    </thead>
+					    <tbody>
+					      <tr ng-repeat="obj in objs">
+					        <td class="text-center">{{obj.ticket_type}}</td>
+					        <td class="text-center">{{obj.ticketattr}}</td>
+					        <td class="text-center">
+					          <a ng-click="del(obj.id)" class="btn btn-warning btn-xs">删除</a>
+					        </td>
+					      </tr>
+					    </tbody>
+					  </table>
 
 				</div>
 			</div>
-
-
-		</div>
-
 		</div>
 	</div>
-
-
 </div>
