--- a/app/07product/views/tktgoodsmodel.html
+++ b/app/07product/views/tktgoodsmodel.html
@@ -54,34 +54,34 @@
 						<div class="form-group">
 							<label class="col-xs-2 control-label">成本价格</label>
 							<div class="col-xs-10">
-								<input type="number" class="form-control" placeholder="请输入成本价格" min='0'
-								ng-model="goodsobj.cost_price"
-								>
+								<div class="input-group">
+									<span class="input-group-addon">$</span>
+									<input type="number" class="form-control" placeholder="请输入成本价格" min='0'
+									ng-model="goodsobj.cost_price"
+									>
+									<span class="input-group-addon">.00</span>
+								</div>
 							</div>
 						</div>
 
 						<div class="form-group">
 							<label class="col-xs-2 control-label">商品分类</label>
 							<div class="col-xs-10">
-								<input type="text" class="form-control" 
-								ng-model="goodsobj.goods_category"
-								>
+								<select class="form-control" ng-model="goodsobj.goods_category	">
+									<option value="1">分类一</option>
+									<option value="2">分类二</option>
+									<option value="3">分类三</option>
+					            </select>
 							</div>
 						</div>
 
 						<div class="form-group">
 							<label class="col-xs-2 control-label">商品状态</label>
 							<div class="col-xs-10">
-								<label class="radio-inline">
-								  <input type="radio" name="state" value="0"
-								  ng-model="goodsobj.state"
-								  > 下架
-								</label>
-								<label class="radio-inline">
-								  <input type="radio" name="state" value="1"
-								  ng-model="goodsobj.state"
-								  > 上架
-								</label>
+								<select class="form-control" ng-model="goodsobj.state" 
+					              ng-options="x.statecode as x.statename for x in statearr"
+					            >
+					            </select>
 							</div>
 						</div>
 					</div>			
@@ -107,10 +107,7 @@
 						<div class="form-group">
 							<label class="col-xs-2 control-label">所属景区</label>
 							<div class="col-xs-10">
-								<select class="form-control" ng-model="goodsobj.place_code" 
-					              ng-options="view.code as view.name for view in viewarr"
-					            >
-					            </select>
+								<p class="form-control-static">{{goodsobj.place_code}}</p>
 							</div>
 						</div>
 
@@ -131,16 +128,7 @@
 						<div class="form-group">
 							<label class="col-xs-2 control-label">商品状态</label>
 							<div class="col-xs-10">
-								<label class="radio-inline">
-								  <input type="radio" name="state" value="0"
-								  ng-model="goodsobj.state"
-								  > 下架
-								</label>
-								<label class="radio-inline">
-								  <input type="radio" name="state" value="1"
-								  ng-model="goodsobj.state"
-								  > 上架
-								</label>
+								<p class="form-control-static">{{goodsobj.state}}</p>
 							</div>
 						</div>
 					</div>
@@ -150,54 +138,56 @@
 	</div>
 </div>
 
-<div class="col-xs-10 col-xs-offset-1" >
-	<div class="panel panel-default form-horizontal">
-		<div class="panel-heading">
-			详情信息
-		</div>
-		<div class="panel-body">
-			<div class="container-fluid">
-				<div class="col-xs-10" >
+<div ng-show="goodsobjdetailstate === 1">
+	<div class="col-xs-10 col-xs-offset-1" >
+		<div class="panel panel-default form-horizontal">
+			<div class="panel-heading">
+				详情信息
+			</div>
+			<div class="panel-body">
+				<div class="container-fluid">
+					<div class="col-xs-10" >
 
-					<div class="form-group">
-						<label class="col-xs-2 control-label">添加票种</label>
-						<div class="col-xs-5">
+						<div class="form-group">
+							<label class="col-xs-2 control-label">添加票种</label>
+							<div class="col-xs-5">
 
-							<select class="form-control" ng-model="goodsobj.ticket_type" 
-				              ng-options="type.code as type.name for type in typearr"
-				            >
-				            </select>
+								<select class="form-control" ng-model="goodsobj.ticket_type" 
+					              ng-options="type.code as type.name for type in typearr"
+					            >
+					            </select>
+							</div>
+							<div class="col-xs-3">
+								<select class="form-control" ng-model="goodsobj.ticketattr" 
+					              ng-options="tktattr.ticket_attr_id as tktattr.type_attr_name for tktattr in tktarr"
+					            >
+					            </select>
+							</div>
+							<div class="col-xs-2">
+								<a ng-click="add()" class="btn btn-success btn-sm">添加</a>
+							</div>
 						</div>
-						<div class="col-xs-3">
-							<select class="form-control" ng-model="goodsobj.ticketattr" 
-				              ng-options="tktattr.ticket_attr_id as tktattr.type_attr_name for tktattr in tktarr"
-				            >
-				            </select>
-						</div>
-						<div class="col-xs-2">
-							<a ng-click="add()" class="btn btn-success btn-sm">添加</a>
-						</div>
+
+						<table class="table table-bordered">
+						    <thead>
+						      <tr>
+						        <th class="col-md-6 text-center">票种类型</th>
+						        <th class="col-md-4 text-center">票种属性</th>
+						        <th class="col-md-2 text-center">操作</th>
+						      </tr>
+						    </thead>
+						    <tbody>
+						      <tr ng-repeat="obj in objs">
+						        <td class="text-center">{{obj.ticket_type}}</td>
+						        <td class="text-center">{{obj.ticketattr}}</td>
+						        <td class="text-center">
+						          <a ng-click="del(obj.id)" class="btn btn-warning btn-xs">删除</a>
+						        </td>
+						      </tr>
+						    </tbody>
+						  </table>
+
 					</div>
-
-					<table class="table table-bordered">
-					    <thead>
-					      <tr>
-					        <th class="col-md-6 text-center">票种类型</th>
-					        <th class="col-md-4 text-center">票种属性</th>
-					        <th class="col-md-2 text-center">操作</th>
-					      </tr>
-					    </thead>
-					    <tbody>
-					      <tr ng-repeat="obj in objs">
-					        <td class="text-center">{{obj.ticket_type}}</td>
-					        <td class="text-center">{{obj.ticketattr}}</td>
-					        <td class="text-center">
-					          <a ng-click="del(obj.id)" class="btn btn-warning btn-xs">删除</a>
-					        </td>
-					      </tr>
-					    </tbody>
-					  </table>
-
 				</div>
 			</div>
 		</div>
