--- a/app/12sale/views/sellinggroup.html
+++ b/app/12sale/views/sellinggroup.html
@@ -4,7 +4,10 @@
 	    <div class="panel-body">
 	        <div class="form-group form-inline">
 	            <div class="col-sm-10">
-	                <label>出游时间</label>&nbsp;&nbsp;
+	                <label>
+	                <input type="checkbox" ng-model="usedate" 
+                    ng-true-value="1" ng-false-value="0"
+                  	> 出游时间</label>&nbsp;&nbsp;
 	                <div class="input-group">
 	                	<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
 	                    <span class="input-group-btn">
@@ -12,16 +15,14 @@
 	                    </span>
 	                </div>
 	                &nbsp;&nbsp;&nbsp;&nbsp;
-	                <label>导游姓名</label>&nbsp;&nbsp;
-	                <input type="text" class="form-control" ng-model="searchform.guide_name" >
+	                <input type="text" class="form-control" ng-model="searchform.guide_name" placeholder="导游姓名">
 	                &nbsp;&nbsp;&nbsp;&nbsp;
-	                <label>导游电话</label>&nbsp;&nbsp;
-	                <input type="text" class="form-control" ng-model="searchform.guide_mobile" >
+	                <input type="text" class="form-control" ng-model="searchform.guide_mobile" placeholder="导游电话">
 	                &nbsp;&nbsp;&nbsp;&nbsp;
 	                <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
 	            </div>
 	            <div class="col-sm-2 text-right">
-	                <button type="button" class="btn btn-info new" ng-click="create()">创建团订单</button>
+	                <button type="button" class="btn btn-info new" ng-click="create()">创建团</button>
 	            </div>
 	        </div>
 	    </div>
@@ -62,7 +63,7 @@
 					<a ng-click="info(obj.code)" class="btn btn-primary btn-sm">报名详情</a>
 					<a ng-click="edit(obj.code)" class="btn btn-success btn-sm">编辑</a>
 					<a ng-click="detail(obj.code)" class="btn btn-info btn-sm">修改纪录</a>
-			        <a ng-click="del(obj.code)" class="btn btn-danger btn-sm">删除</a>
+			        <!-- <a ng-click="del(obj.code)" class="btn btn-danger btn-sm">删除</a> -->
 		        </div>
 	        </td>
 	      </tr>
