--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -2,14 +2,14 @@
 
 	<div class="col-xs-12 col-md-12 mt10" >
 
-		<div class="form-group">
+		<!-- <div class="form-group">
 			<label class="col-sm-3 control-label"></label>
 			<div class="col-sm-9 col-xs-12">
 				<button type="button" class="btn btn-success btn-lg btn-block"
 				ng-click="save()"
 				>保存</button>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="form-group">
 			<label class="col-sm-3 col-xs-12 control-label">销售品名称</label>
@@ -60,12 +60,12 @@
 			</div>
 		</div>
 
-		<!-- ng-disabled="saleobj.id != ''" -->
+		<!-- ng-disabled="saleobj.id != ''" ng-change="changeCategory()" -->
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">销售品分类</label>
 			<div class="col-sm-9  col-xs-12" >
 				<ui-select ng-model="saleobj.sale_category" theme="bootstrap"
-		          ng-change="changeCategory()"
+				ng-disabled="saleobj.id != ''"
 		          >
 		            <ui-select-match placeholder="请选择一个销售品分类">{{$select.selected.label}}</ui-select-match>
 		            <ui-select-choices 
