--- a/app/07product/views/product.html
+++ b/app/07product/views/product.html
@@ -7,29 +7,41 @@
 <div class="col-sm-12">
     <uib-tabset active="activeForm">
 
-      <uib-tab index="1" heading="票种信息" ng-if="saleobj.id !== '' && saleobj.code !== ''">
+      <uib-tab index="0" heading="基本信息">
+        <productbaseinfo
+          saleobj="saleobj"
+          baseinfo="baseinfo"
+          util="util"
+          funobj="funobj"
+        ></productbaseinfo>
+      </uib-tab>
+
+      <uib-tab index="1" heading="票种信息" 
+      ng-if="saleobj.id !== '' && saleobj.code !== ''">
         <producttickettype
           saleobj="saleobj"
           util="util"
         ></producttickettype>
       </uib-tab>
 
-      <uib-tab index="0" heading="基本信息">
-        <productbaseinfo
-          saleobj="saleobj"
-          baseinfo="baseinfo"
-          util="util"
-        ></productbaseinfo>
-      </uib-tab>
-
-
-
-
 
       <uib-tab index="2" heading="系统确认项" 
-      ng-show="saleobj.id !== '' && saleobj.sys_affirm_type == 0">
-        More Tab Content
+      ng-if="saleobj.code !== '' && saleobj.sys_affirm_type == 0">
+        <productaffirm
+          saleobj="saleobj"
+          util="util"
+        ></productaffirm>
       </uib-tab>
+
+
+      <uib-tab index="3" heading="配置积分" 
+      ng-if="saleobj.code !== '' && funobj.hasOwnProperty('integral')">
+        <productintegral
+          saleobj="saleobj"
+          util="util"
+        ></productintegral>
+      </uib-tab>
+
     </uib-tabset>
 
 </div>
