--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -80,12 +80,12 @@
 		    <label class="col-sm-3 col-xs-12 control-label">短信发送类型</label>
 		    <div class="col-sm-9 col-xs-12">
 		    	<label class="radio-inline">
-				  <input type="radio" name="sms_type" value="1"
+				  <input type="radio" name="sms_type" value="'1'"
 				  ng-model="saleobj.sms_type"
 				  > 发送短信
 				</label>
 				<label class="radio-inline">
-				  <input type="radio" name="sms_type" value="0"
+				  <input type="radio" name="sms_type" value="'0'"
 				  ng-model="saleobj.sms_type"
 				  > 不发短信
 				</label>
